test/1.2/errors/T_EINCTYPE.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init() {
    local bool ok;
    /// ERROR EINCTYPE
    ok++;
    /// ERROR EINCTYPE
    --ok;
    local int a[4];
    /// ERROR EINCTYPE
    a++;
}
